--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,9 @@ jobs:
     steps:
     - name: Checkout repository and submodules
       uses: actions/checkout@v2
+
+    - name: Install Libevent
+      run: brew install libevent
         
     - name: Build
       shell: bash
